Extend Kryo classes to all used for NamesIndex